Pre-work for champs section

--- a/css/badge.css
+++ b/css/badge.css
@@ -1099,7 +1099,7 @@
 	background-color: #ffffff;
 	background-size: 100% 100%;
 	color: #ff0000;
-	text-shadow: -1px -1px 0 #009900,1px -1px 0 #009900,-1px 1px 0 #009900,1px 1px 0 #009900;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
 .x160 {
 	background-image: url('../image/logos/vitessearnhem.png');
