Almagro colour adjustment

--- a/css/badge.css
+++ b/css/badge.css
@@ -1910,8 +1910,8 @@
 	background-image: url('../image/logos/sanlorenzo.png');
 	background-color: #ffffff;
 	background-size: 100% 100%;
-	color: #0000ff;
-	text-shadow: -1px -1px 0 #ff0000,1px -1px 0 #ff0000,-1px 1px 0 #ff0000,1px 1px 0 #ff0000;
+	color: #cc0000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
 .x275 {
 	background-image: url('../image/logos/egypt.png');
