new badges for UEL

--- a/css/badge.css
+++ b/css/badge.css
@@ -2109,3 +2109,45 @@
 	color: #990044;
 	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
+.x303 {
+	background-image: url('../image/logos/cfrcluj.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #990044;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x304 {
+	background-image: url('../image/logos/ferencvaros.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #009900;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x305 {
+	background-image: url('../image/logos/lasklinz.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #000000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x306 {
+	background-image: url('../image/logos/rcdespanyol.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #0000ff;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x307 {
+	background-image: url('../image/logos/slovanbratislava.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #77aadd;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x308 {
+	background-image: url('../image/logos/trabzonspor.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #00aaff;
+	text-shadow: -1px -1px 0 #990044,1px -1px 0 #990044,-1px 1px 0 #990044,1px 1px 0 #990044;
+}
