--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .e-ryg	{ color: #ff0000; background: repeating-linear-gradient(to bottom, #fff00c, #fff00c 15%, #009900 15%, #009900); text-shadow: -1px -1px 0 #009900,1px -1px 0 #009900,-1px 1px 0 #009900,1px 1px 0 #009900;}
 .e-ura	{ color: #ffcc00; background: repeating-linear-gradient(to bottom, #ff0000, #ff0000 15%, #3366ff 15%, #3366ff); text-shadow: -1px -1px 0 #3366ff,1px -1px 0 #3366ff,-1px 1px 0 #3366ff,1px 1px 0 #3366ff;}
 .e-uub	{ color: #ffcc00; background: repeating-linear-gradient(to bottom, #ffcc00, #ffcc00 15%, #0000ff 15%, #0000ff); text-shadow: -1px -1px 0 #0000ff,1px -1px 0 #0000ff,-1px 1px 0 #0000ff,1px 1px 0 #0000ff;}
+.e-uuk	{ color: #ffcc00; background: repeating-linear-gradient(to bottom, #ffcc00, #ffcc00 15%, #000000 15%, #000000); text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;}
 .e-uun	{ color: #ffcc00; background: repeating-linear-gradient(to bottom, #ffcc00, #ffcc00 15%, #000099 15%, #000099); text-shadow: -1px -1px 0 #000099,1px -1px 0 #000099,-1px 1px 0 #000099,1px 1px 0 #000099;}
 .e-vvw	{ color: #aa5533; background: repeating-linear-gradient(to bottom, #aa5533, #aa5533 15%, #ffffff 15%, #ffffff); text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;}
 .e-wbo	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #0000ff, #0000ff 15%, #ff9900 15%, #ff9900); text-shadow: -1px -1px 0 #ff9900,1px -1px 0 #ff9900,-1px 1px 0 #ff9900,1px 1px 0 #ff9900;}
