--- a/css/badge.css
+++ b/css/badge.css
@@ -1610,7 +1610,7 @@
 	background-color: #ffffff;
 	background-size: 100% 100%;
 	color: #0000ff;
-	text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
 .x233 {
 	background-image: url('../image/logos/torino.png');
@@ -2135,5 +2135,75 @@
 	background-color: #ffffff;
 	background-size: 100% 100%;
 	color: #77aadd;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x308 {
+	background-image: url('../image/logos/melbournecity.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ffffff;
+	text-shadow: -1px -1px 0 #77aadd,1px -1px 0 #77aadd,-1px 1px 0 #77aadd,1px 1px 0 #77aadd;
+}
+.x309 {
+	background-image: url('../image/logos/newcastleunited.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #000000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x310 {
+	background-image: url('../image/logos/blackpool.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ffffff;
+	text-shadow: -1px -1px 0 #ff9900,1px -1px 0 #ff9900,-1px 1px 0 #ff9900,1px 1px 0 #ff9900;
+}
+.x311 {
+	background-image: url('../image/logos/westbromwichalbion.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ffffff;
+	text-shadow: -1px -1px 0 #000099,1px -1px 0 #000099,-1px 1px 0 #000099,1px 1px 0 #000099;
+}
+.x312 {
+	background-image: url('../image/logos/boltonwanderers.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ffffff;
+	text-shadow: -1px -1px 0 #000099,1px -1px 0 #000099,-1px 1px 0 #000099,1px 1px 0 #000099;
+}
+.x313 {
+	background-image: url('../image/logos/westhamunited.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #990044;
+	text-shadow: -1px -1px 0 #77aadd,1px -1px 0 #77aadd,-1px 1px 0 #77aadd,1px 1px 0 #77aadd;
+}
+.x314 {
+	background-image: url('../image/logos/sunderlandafc.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #ffffff;
+	text-shadow: -1px -1px 0 #ff0000,1px -1px 0 #ff0000,-1px 1px 0 #ff0000,1px 1px 0 #ff0000;
+}
+.x315 {
+	background-image: url('../image/logos/coventrycity.png');
+	background-color: #77aadd;
+	background-size: 100% 100%;
+	color: #77aadd;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
+.x316 {
+	background-image: url('../image/logos/afcwimbledon.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #000099;
+	text-shadow: -1px -1px 0 #fff00c,1px -1px 0 #fff00c,-1px 1px 0 #fff00c,1px 1px 0 #fff00c;
+}
+.x317 {
+	background-image: url('../image/logos/wiganathletic.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #0000ff;
 	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
