Added new badge (Al Hilal)

--- a/css/badge.css
+++ b/css/badge.css
@@ -2207,3 +2207,10 @@
 	color: #0000ff;
 	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
+.x318 {
+	background-image: url('../image/logos/alhilal.png');
+	background-color: #ffffff;
+	background-size: 100% 100%;
+	color: #0000ff;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
+}
