--- a/css/badge.css
+++ b/css/badge.css
@@ -1218,7 +1218,7 @@
 	background-color: #ffffff;
 	background-size: 100% 100%;
 	color: #dd0000;
-	text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;
+	text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
 }
 .x177 {
 	background-image: url('../image/logos/apollonlimassol.png');
