--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ g - green	#009900		n - navy		#000099		u - gold	#ffcc00
 .h-wkr	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #000000, #000000 15%, #ff0000 15%, #ff0000 85%, #000000 85%, #000000);}
 .h-wrb	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #ff0000, #ff0000 15%, #0000ff 15%, #0000ff 85%, #ff0000 85%, #ff0000);}
 .h-wrk	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #ff0000, #ff0000 15%, #000000 15%, #000000 85%, #ff0000 85%, #ff0000);}
-.h-wsk	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #aaaaaa, #aaaaaa 15%, #000000 15%, #000000 85%, #aaaaaa 85%, #aaaaaa);}
+.h-wsk	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #aaaaaa, #aaaaaa 15%, #000000 15%, #000000 85%, #aaaaaa 85%, #aaaaaa); text-shadow: -1px -1px 0 #000000,1px -1px 0 #000000,-1px 1px 0 #000000,1px 1px 0 #000000;}
 .h-wwb	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #ffffff, #ffffff 15%, #0000ff 15%, #0000ff 85%, #ffffff 85%, #ffffff); text-shadow: -1px -1px 0 #0000ff,1px -1px 0 #0000ff,-1px 1px 0 #0000ff,1px 1px 0 #0000ff;}
 .h-wwg	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #ffffff, #ffffff 15%, #009900 15%, #009900 85%, #ffffff 85%, #ffffff); text-shadow: -1px -1px 0 #009900,1px -1px 0 #009900,-1px 1px 0 #009900,1px 1px 0 #009900;}
 .h-wwn	{ color: #ffffff; background: repeating-linear-gradient(to bottom, #ffffff, #ffffff 15%, #000099 15%, #000099 85%, #ffffff 85%, #ffffff); text-shadow: -1px -1px 0 #000099,1px -1px 0 #000099,-1px 1px 0 #000099,1px 1px 0 #000099;}
